--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
     var(--black) 70%,
     var(--black) 100%
   );
+  padding: 10px;
 }
 
 /* NAVIGATION AND HEADER */
@@ -39,7 +40,6 @@ nav {
 }
 
 .navLogo img {
-  padding: 20px;
   max-width: 300px;
 }
 
@@ -65,7 +65,7 @@ section {
   flex-direction: column;
   flex-wrap: wrap;
   margin: auto;
-  padding: 50px 50px;
+  padding: 50px 0px;
   width: 100%;
 }
 
@@ -140,7 +140,7 @@ section {
 .logoImgRack img {
   width: 100%;
   margin: auto;
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 .projectContainer {
@@ -150,7 +150,7 @@ section {
   margin: auto;
   justify-content: center;
   gap: 30px;
-  padding: 50px;
+  padding: 50px 0px;
 }
 
 .projectContainer div {
@@ -215,6 +215,10 @@ footer {
   min-width: 300px;
 }
 
+.selfie div img {
+  width: 100%;
+}
+
 .selfieBottomText {
   max-width: 900px;
   margin: auto;
@@ -228,7 +232,7 @@ footer {
   width: 100%;
   margin: auto;
   gap: 50px;
-  padding: 50px;
+  padding: 50px 0px;
 }
 
 .contactTextCont {
@@ -245,7 +249,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-self: flex-start;
-  min-width: 450px;
+  min-width: 320px;
   text-align: left;
 }
 
