--- a/css/style.css
+++ b/css/style.css
@@ -363,8 +363,7 @@ footer {
 .topNav {
   position: fixed;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  left: 0;
 }
 
 .spookyLogo {
@@ -373,7 +372,6 @@ footer {
   margin-top: 50px;
   margin-bottom: 0;
   width: 120px;
-  opacity: 0.8;
 }
 
 .spookyLogo:hover {
