--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   margin: auto;
   gap: 30px;
   animation: scale 0.4s ease-in-out;
@@ -158,6 +158,7 @@ section {
 .indexHeader h1 {
   font-family: "customFont", sans-serif;
   letter-spacing: 8px;
+  margin-top: 30px;
 }
 
 .sectionHeader {
@@ -198,13 +199,17 @@ section {
   flex-wrap: wrap;
   max-width: 900px;
   margin: auto;
-  gap: 2rem;
+  gap: 1rem;
+}
+
+.myPortf {
+  text-align: center;
 }
 
 .intro p {
   max-width: 380px;
-  margin-bottom: 70px;
-  text-align: center;
+  margin: 40px auto;
+  text-align: left;
 }
 
 .cta {
@@ -216,7 +221,7 @@ section {
   text-transform: uppercase;
   border: none;
   box-shadow: 0px 0px 25px red;
-  margin: auto;
+  /* margin: auto; */
 }
 
 .cta:hover {
@@ -257,6 +262,7 @@ section {
   gap: 30px;
   padding: 50px 0px;
   margin-bottom: 100px;
+  line-height: 1.4rem;
 }
 
 .projectContainer div {
