--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ nav {
   max-width: 125px;
   position: fixed;
   cursor: pointer;
+  z-index: 1;
 }
 
 .navLogo img:hover {
@@ -79,6 +80,7 @@ nav {
   opacity: 1;
   display: flex;
   animation: scale 0.4s ease-out;
+  z-index: 1;
 }
 
 .hide {
@@ -411,11 +413,12 @@ footer {
   padding: 10px 20px;
   text-transform: uppercase;
   border: none;
-  box-shadow: 0px 0px 25px red;
+  /* box-shadow: 0px 0px 25px red; */
 }
 
 .formCta:hover {
-  box-shadow: 0px 0px 25px greenyellow;
+  /* box-shadow: 0px 0px 25px greenyellow; */
+  cursor: pointer;
 }
 
 .thankYouForm {
