--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ a {
   transform: translate(-50%, -50%);
   z-index: 99;
   border: none;
-  box-shadow: 0px 0px 50px var(--spookyRed), 0px 0px 250px 250px black;
+  box-shadow: 0px 0px 180px 50px var(--spookyRed), 0px 0px 250px 250px black;
   box-sizing: content-box;
 }
 
