--- a/css/style.css
+++ b/css/style.css
@@ -243,12 +243,13 @@ section {
   display: flex;
   width: 100%;
   justify-content: center;
-  max-width: 400px;
+  max-width: 450px;
   margin: 100px auto 100px auto;
+  gap: 10px;
 }
 
 .logoImgRack img {
-  width: 100%;
+  /* width: 100%; */
   margin: auto;
 }
 
