--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,10 @@ nav {
   border: 0;
   border-radius: 100%;
   background-color: black;
-  box-shadow: 0px 0px 200px red, 0px 0px 30px orange, inset 0px 0px 30px gray;
+  box-shadow:
+    0px 0px 200px red,
+    0px 0px 30px orange,
+    inset 0px 0px 30px gray;
   animation: scale 0.4s ease-out;
 }
 
@@ -210,7 +213,9 @@ section {
   text-align: center;
   font-family: "customFont";
   letter-spacing: 4px;
-  text-shadow: 0px 0px 5px var(--black), 4px 0px 20px var(--spookyRed);
+  text-shadow:
+    0px 0px 5px var(--black),
+    4px 0px 20px var(--spookyRed);
 }
 
 .intro p {
@@ -319,7 +324,7 @@ a {
   letter-spacing: 1px;
 }
 
-/* FOOTER, ABOUT AND CONTACT */
+/* FOOTER, ABOUT AND connect */
 
 footer {
   display: flex;
@@ -363,7 +368,7 @@ footer {
   margin-top: 30px;
 }
 
-/* CONTACT */
+/* connect */
 .formContainer {
   display: flex;
   flex-wrap: wrap;
@@ -375,7 +380,7 @@ footer {
   margin-bottom: 200px;
 }
 
-.contactTextCont {
+.connectTextCont {
   text-align: left;
   max-width: 460px;
 }
@@ -385,7 +390,7 @@ footer {
   text-decoration: none;
 }
 
-.contactFormCont {
+.connectFormCont {
   max-width: 450px;
   flex: 1;
 }
